--- a/_locale/ar/index.md.po
+++ b/_locale/ar/index.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-19 18:55+0100\n"
+"POT-Creation-Date: 2021-01-19 21:07+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,8 +37,8 @@ msgstr "indekso"
 #. type: YAML Front Matter: layout
 #: index.md:1
 #, no-wrap
-msgid "index"
-msgstr "index"
+msgid "page"
+msgstr "page"
 
 #. type: YAML Front Matter: title
 #: index.md:1
@@ -48,8 +48,7 @@ msgstr " _jekyll-plurlingva_ "
 
 #. type: Plain text
 #: index.md:9
-#, no-wrap
-#, fuzzy
+#, fuzzy, no-wrap
 msgid " _Jekyll-plurlingva_ estas skeleto por la kreado de statikaj plurlingvaj retejoj bazitaj sur jekyll.  \n"
 msgstr " _Jekyll-plurlingva_ هو هيكل لإنشاء مواقع ثابتة متعددة اللغات تعتمد على jekyll.  \n"
 
@@ -61,8 +60,7 @@ msgstr "الغرض منه هو أن يظل خفيفًا من أجل البساط
 
 #. type: Plain text
 #: index.md:27
-#, no-wrap
-#, fuzzy
+#, fuzzy, no-wrap
 msgid ""
 "Ĝiaj plej okulfrapaj trajtoj:\n"
 " * desegno sur du kolumnoj:\n"
@@ -79,7 +77,25 @@ msgid ""
 "   * ĝi estas lingvo kun simpla gramatiko kaj senescepte, ĝi estas do pli facile administrebla per programaj tradukistoj. .\n"
 "   * ĝi estas tre preciza lingvo, generante malpli dusencecon ol la angla.\n"
 "   * ĝi estas tre facile lernebla, kia ajn estas la lingvo de la studento.\n"
-msgstr "أبرز ميزاته:\n * الرسم على عمودين:\n   * على اليسار ، قائمة قابلة للسحب ، مع اختيار اللغة ، بحث الويب من Google ، والقائمة من الموقع.\n   * على اليمين ، المحتوى الرئيسي.\n * مناسبة للمواقع _Github Pages_ .\n * كل احتمالات jekyll. تسمح لك النصوص\n * بترجمة الصفحات تلقائيًا إلى جميع لغات الموقع. تتم إدارة الترجمات\n * بواسطة ملفات po:\n   * إذا قمت بتعديل أو إضافة فقرة على الصفحة ، فإن هذه الترجمة فقط تحتاج إلى إعادة ترجمتها.\n   * يمكنك إرسال هذا الملف إلى مترجم بشري لتصحيحه.\n * تتم الإشارة إلى النصوص المترجمة تلقائيًا بواسطة قسم يقدم المستند باللغات التي تم تصحيحها بواسطة شخص ما.\n * تستخدم الترجمات الإسبرانتو كلغة محورية. قد يبدو هذا الاختيار غريبًا للوهلة الأولى ، لكن له عدة مزايا:\n   * إنها لغة ذات قواعد نحوية بسيطة وبدون استثناء ، وبالتالي يسهل إدارتها مع مترجمي البرامج. .\n   * إنها لغة دقيقة للغاية ، وتولد غموضًا أقل من اللغة الإنجليزية.\n   * من السهل جدًا التعلم ، مهما كانت لغة الطالب.\n"
+msgstr ""
+"أبرز ميزاته:\n"
+" * الرسم على عمودين:\n"
+"   * على اليسار ، قائمة قابلة للسحب ، مع اختيار اللغة ، بحث الويب من Google ، والقائمة من الموقع.\n"
+"   * على اليمين ، المحتوى الرئيسي.\n"
+" * مناسبة للمواقع _Github Pages_ .\n"
+" * كل احتمالات jekyll. تسمح لك النصوص\n"
+" * بترجمة الصفحات تلقائيًا إلى جميع لغات الموقع. تتم إدارة الترجمات\n"
+" * بواسطة ملفات po:\n"
+"   * إذا قمت بتعديل أو إضافة فقرة على الصفحة ، فإن هذه الترجمة فقط تحتاج إلى إعادة ترجمتها.\n"
+"   * يمكنك إرسال هذا الملف إلى مترجم بشري لتصحيحه.\n"
+" * تتم الإشارة إلى النصوص المترجمة تلقائيًا بواسطة قسم يقدم المستند باللغات التي تم تصحيحها بواسطة شخص ما.\n"
+" * تستخدم الترجمات الإسبرانتو كلغة محورية. قد يبدو هذا الاختيار غريبًا للوهلة الأولى ، لكن له عدة مزايا:\n"
+"   * إنها لغة ذات قواعد نحوية بسيطة وبدون استثناء ، وبالتالي يسهل إدارتها مع مترجمي البرامج. .\n"
+"   * إنها لغة دقيقة للغاية ، وتولد غموضًا أقل من اللغة الإنجليزية.\n"
+"   * من السهل جدًا التعلم ، مهما كانت لغة الطالب.\n"
+
+#~ msgid "index"
+#~ msgstr "index"
 
 #, fuzzy
 #~ msgid ""
