--- a/_locale/fr/index.md.po
+++ b/_locale/fr/index.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-19 18:55+0100\n"
+"POT-Creation-Date: 2021-01-19 21:07+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,8 +37,8 @@ msgstr "indekso"
 #. type: YAML Front Matter: layout
 #: index.md:1
 #, no-wrap
-msgid "index"
-msgstr "index"
+msgid "page"
+msgstr "page"
 
 #. type: YAML Front Matter: title
 #: index.md:1
@@ -48,8 +48,7 @@ msgstr " _jekyll-plurlingva_ "
 
 #. type: Plain text
 #: index.md:9
-#, no-wrap
-#, fuzzy
+#, fuzzy, no-wrap
 msgid " _Jekyll-plurlingva_ estas skeleto por la kreado de statikaj plurlingvaj retejoj bazitaj sur jekyll.  \n"
 msgstr " _Jekyll-plurlingva_ est un squelette pour la création de sites web statiques multilingues basés sur jekyll.  \n"
 
@@ -61,8 +60,7 @@ msgstr "Son but est de rester léger pour la simplicité.\n"
 
 #. type: Plain text
 #: index.md:27
-#, no-wrap
-#, fuzzy
+#, fuzzy, no-wrap
 msgid ""
 "Ĝiaj plej okulfrapaj trajtoj:\n"
 " * desegno sur du kolumnoj:\n"
@@ -79,7 +77,25 @@ msgid ""
 "   * ĝi estas lingvo kun simpla gramatiko kaj senescepte, ĝi estas do pli facile administrebla per programaj tradukistoj. .\n"
 "   * ĝi estas tre preciza lingvo, generante malpli dusencecon ol la angla.\n"
 "   * ĝi estas tre facile lernebla, kia ajn estas la lingvo de la studento.\n"
-msgstr "Ses caractéristiques les plus marquantes:\n * dessin sur deux colonnes:\n   * à gauche, un menu rétractable, avec le choix de la langue, la recherche Google sur le Web et le menu du site Web.\n   * à droite, le contenu principal.\n * adapté aux sites Internet _Github Pages_ .\n * toutes les possibilités de jekyll. Les scripts\n * vous permettent de traduire automatiquement des pages dans toutes les langues du site.\n * les traductions sont gérées par des fichiers po:\n   * si vous modifiez ou ajoutez un paragraphe sur une page, seul celui-ci a besoin d'être retraduit.\n   * vous pouvez envoyer ce fichier à un traducteur humain pour correction.\n * Les textes traduits automatiquement sont indiqués par une section qui propose le document dans les langues corrigées par une personne.\n * Les traductions utilisent l'espéranto comme langue pivot. Ce choix peut paraître étrange à première vue, mais il présente plusieurs avantages:\n   * c'est une langue avec une grammaire simple et sans exception, il est donc plus facile à gérer avec des traducteurs logiciels. .\n   * c'est une langue très précise, générant moins d'ambiguïté que l'anglais.\n   * il est très facile à apprendre, quelle que soit la langue de l'élève.\n"
+msgstr ""
+"Ses caractéristiques les plus marquantes:\n"
+" * dessin sur deux colonnes:\n"
+"   * à gauche, un menu rétractable, avec le choix de la langue, la recherche Google sur le Web et le menu du site Web.\n"
+"   * à droite, le contenu principal.\n"
+" * adapté aux sites Internet _Github Pages_ .\n"
+" * toutes les possibilités de jekyll. Les scripts\n"
+" * vous permettent de traduire automatiquement des pages dans toutes les langues du site.\n"
+" * les traductions sont gérées par des fichiers po:\n"
+"   * si vous modifiez ou ajoutez un paragraphe sur une page, seul celui-ci a besoin d'être retraduit.\n"
+"   * vous pouvez envoyer ce fichier à un traducteur humain pour correction.\n"
+" * Les textes traduits automatiquement sont indiqués par une section qui propose le document dans les langues corrigées par une personne.\n"
+" * Les traductions utilisent l'espéranto comme langue pivot. Ce choix peut paraître étrange à première vue, mais il présente plusieurs avantages:\n"
+"   * c'est une langue avec une grammaire simple et sans exception, il est donc plus facile à gérer avec des traducteurs logiciels. .\n"
+"   * c'est une langue très précise, générant moins d'ambiguïté que l'anglais.\n"
+"   * il est très facile à apprendre, quelle que soit la langue de l'élève.\n"
+
+#~ msgid "index"
+#~ msgstr "index"
 
 #, fuzzy
 #~ msgid ""
