--- a/_locale/it/index.md.po
+++ b/_locale/it/index.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-19 18:55+0100\n"
+"POT-Creation-Date: 2021-01-19 21:07+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,8 +37,8 @@ msgstr "indekso"
 #. type: YAML Front Matter: layout
 #: index.md:1
 #, no-wrap
-msgid "index"
-msgstr "index"
+msgid "page"
+msgstr "page"
 
 #. type: YAML Front Matter: title
 #: index.md:1
@@ -48,8 +48,7 @@ msgstr " _jekyll-plurlingva_ "
 
 #. type: Plain text
 #: index.md:9
-#, no-wrap
-#, fuzzy
+#, fuzzy, no-wrap
 msgid " _Jekyll-plurlingva_ estas skeleto por la kreado de statikaj plurlingvaj retejoj bazitaj sur jekyll.  \n"
 msgstr " _Jekyll-plurlingva_ è uno scheletro per la creazione di siti web multilingue statici basati su jekyll.  \n"
 
@@ -61,8 +60,7 @@ msgstr "Il suo scopo è rimanere leggeri per semplicità.\n"
 
 #. type: Plain text
 #: index.md:27
-#, no-wrap
-#, fuzzy
+#, fuzzy, no-wrap
 msgid ""
 "Ĝiaj plej okulfrapaj trajtoj:\n"
 " * desegno sur du kolumnoj:\n"
@@ -79,7 +77,25 @@ msgid ""
 "   * ĝi estas lingvo kun simpla gramatiko kaj senescepte, ĝi estas do pli facile administrebla per programaj tradukistoj. .\n"
 "   * ĝi estas tre preciza lingvo, generante malpli dusencecon ol la angla.\n"
 "   * ĝi estas tre facile lernebla, kia ajn estas la lingvo de la studento.\n"
-msgstr "Le sue caratteristiche più sorprendenti:\n * disegno su due colonne:\n   * a sinistra, un menu a scomparsa, con la scelta della lingua, la ricerca web di Google e il menu del sito web.\n   * a destra, il contenuto principale.\n * adatto per siti web _Github Pages_ .\n * tutte le possibilità di jekyll. Gli script\n * consentono di tradurre automaticamente le pagine in tutte le lingue del sito.\n * le traduzioni sono gestite da file po:\n   * se modifichi o aggiungi un paragrafo in una pagina, solo questo deve essere ritradotto.\n   * puoi inviare questo file a un traduttore umano per la correzione.\n * I testi tradotti automaticamente sono indicati da una sezione che offre il documento nelle lingue corrette da una persona.\n * Le traduzioni usano l'esperanto come lingua cardine. Questa scelta può sembrare strana a prima vista, ma presenta diversi vantaggi:\n   * è un linguaggio con una grammatica semplice e senza eccezioni, è quindi più facile da gestire con i traduttori software. .\n   * è una lingua molto precisa, che genera meno ambiguità dell'inglese.\n   * è molto facile da imparare, qualunque sia la lingua dello studente.\n"
+msgstr ""
+"Le sue caratteristiche più sorprendenti:\n"
+" * disegno su due colonne:\n"
+"   * a sinistra, un menu a scomparsa, con la scelta della lingua, la ricerca web di Google e il menu del sito web.\n"
+"   * a destra, il contenuto principale.\n"
+" * adatto per siti web _Github Pages_ .\n"
+" * tutte le possibilità di jekyll. Gli script\n"
+" * consentono di tradurre automaticamente le pagine in tutte le lingue del sito.\n"
+" * le traduzioni sono gestite da file po:\n"
+"   * se modifichi o aggiungi un paragrafo in una pagina, solo questo deve essere ritradotto.\n"
+"   * puoi inviare questo file a un traduttore umano per la correzione.\n"
+" * I testi tradotti automaticamente sono indicati da una sezione che offre il documento nelle lingue corrette da una persona.\n"
+" * Le traduzioni usano l'esperanto come lingua cardine. Questa scelta può sembrare strana a prima vista, ma presenta diversi vantaggi:\n"
+"   * è un linguaggio con una grammatica semplice e senza eccezioni, è quindi più facile da gestire con i traduttori software. .\n"
+"   * è una lingua molto precisa, che genera meno ambiguità dell'inglese.\n"
+"   * è molto facile da imparare, qualunque sia la lingua dello studente.\n"
+
+#~ msgid "index"
+#~ msgstr "index"
 
 #, fuzzy
 #~ msgid ""
