--- a/_locale/fr/index.md.pot
+++ b/_locale/fr/index.md.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-19 18:03+0100\n"
+"POT-Creation-Date: 2021-01-19 21:12+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,7 +37,7 @@ msgstr ""
 #. type: YAML Front Matter: layout
 #: index.md:1
 #, no-wrap
-msgid "index"
+msgid "page"
 msgstr ""
 
 #. type: YAML Front Matter: title
@@ -49,7 +49,7 @@ msgstr ""
 #. type: Plain text
 #: index.md:9
 #, no-wrap
-msgid " _Jekyll-plurlingva_ est un squelette pour la création de sites Web multilingues statiques basés sur jekyll.  \n"
+msgid " _Jekyll-plurlingva_ est un squelette pour la création de sites web statiques multilingues basés sur jekyll.  \n"
 msgstr ""
 
 #. type: Plain text
@@ -63,18 +63,18 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Ses caractéristiques les plus marquantes:\n"
-" * conception sur deux colonnes:\n"
-"   * à gauche, un menu rétractable, avec le choix de la langue, une recherche Google sur le site, et le menu du site.\n"
+" * dessin sur deux colonnes:\n"
+"   * à gauche, un menu rétractable, avec le choix de la langue, la recherche Google sur le Web et le menu du site Web.\n"
 "   * à droite, le contenu principal.\n"
 " * adapté aux sites Internet _Github Pages_ .\n"
 " * toutes les possibilités de jekyll. Les scripts\n"
-" * permettent de traduire automatiquement des pages dans toutes les langues du site.\n"
+" * vous permettent de traduire automatiquement des pages dans toutes les langues du site.\n"
 " * les traductions sont gérées par des fichiers po:\n"
 "   * si vous modifiez ou ajoutez un paragraphe sur une page, seul celui-ci a besoin d'être retraduit.\n"
 "   * vous pouvez envoyer ce fichier à un traducteur humain pour correction.\n"
 " * Les textes traduits automatiquement sont indiqués par une section qui propose le document dans les langues corrigées par une personne.\n"
-" * Les traductions utilisent l'espéranto comme langue pivot. Ce choix peut paraître étrange au premier abord, mais il présente plusieurs avantages:\n"
-"   * c'est une langue avec une grammaire simple et sans exception, elle est donc plus facile à gérer par les traducteurs de programmes.\n"
+" * Les traductions utilisent l'espéranto comme langue pivot. Ce choix peut paraître étrange à première vue, mais il présente plusieurs avantages:\n"
+"   * c'est une langue avec une grammaire simple et sans exception, il est donc plus facile à gérer avec des traducteurs logiciels. .\n"
 "   * c'est une langue très précise, générant moins d'ambiguïté que l'anglais.\n"
 "   * il est très facile à apprendre, quelle que soit la langue de l'élève.\n"
 msgstr ""
