--- a/_locale/index.md.pot
+++ b/_locale/index.md.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-19 21:07+0100\n"
+"POT-Creation-Date: 2021-01-19 21:12+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -63,18 +63,18 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Ĝiaj plej okulfrapaj trajtoj:\n"
-" * desegno sur du kolumnoj:\n"
-"   * maldekstre, retirebla menuo, kun la elekto de lingvo, Gugla serĉo en la retejo, kaj la menuo de retejo.\n"
+" * desegnita sur du kolumnoj:\n"
+"   * maldekstre, retirebla menuo, kun la elekto de lingvo, la Gugla serĉo en la Reteja kaj reteja menuo.\n"
 "   * dekstre, la ĉefa enhavo.\n"
 " * taŭga por retejoj _Github Pages_ .\n"
 " * ĉiuj eblecoj de jekyll. La skriptoj\n"
-" * permesas aŭtomate traduki paĝojn al ĉiuj lingvoj de la retejo.\n"
+" * permesas al vi aŭtomate traduki paĝojn en ĉiuj lingvoj de la retejo.\n"
 " * tradukoj estas administrataj de po-dosieroj:\n"
 "   * se vi modifas aŭ aldonas alineon en paĝo, nur ĉi tiu devas esti retradukita .\n"
 "   * vi povas sendi ĉi tiun dosieron al homa tradukisto por korekto.\n"
 " * Aŭtomate tradukitaj tekstoj estas indikitaj per sekcio, kiu ofertas la dokumenton en la lingvoj korektitaj de persono.\n"
 " * La tradukoj uzas Esperanton kiel pivotan lingvon. Ĉi tiu elekto povas ŝajni stranga unuavide, sed ĝi havas plurajn avantaĝojn:\n"
-"   * ĝi estas lingvo kun simpla gramatiko kaj senescepte, ĝi estas do pli facile administrebla per programaj tradukistoj. .\n"
+"   * ĝi estas lingvo kun simpla gramatiko kaj senescepte, do pli facile administreblas per programaj tradukiloj. .\n"
 "   * ĝi estas tre preciza lingvo, generante malpli dusencecon ol la angla.\n"
 "   * ĝi estas tre facile lernebla, kia ajn estas la lingvo de la studento.\n"
 msgstr ""
