--- a/_locale/fr/012-krei_2_github_pages.md.pot
+++ b/_locale/fr/012-krei_2_github_pages.md.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-19 21:07+0100\n"
+"POT-Creation-Date: 2021-01-20 22:17+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr ""
 #. type: YAML Front Matter: title
 #: 012-krei_2_github_pages.md:1
 #, no-wrap
-msgid "créez un site _\"github page\"_ secondaire "
+msgid "créez 1 sous-site _\"github page\"_"
 msgstr ""
 
 #. type: Plain text
@@ -57,7 +57,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Entrez un nom de dépot, et validez la création du dépot.\n"
-"Allez dans les pramètres de votre dépot, descendez jusqu'au paragraphe _«Github Pages»_, et remplacez «None» par «master», cliquez sur «Save».\n"
+"Allez dans les paramètres de votre dépot, descendez jusqu'au paragraphe _«Github Pages»_, et remplacez «None» par «master», cliquez sur «Save».\n"
 msgstr ""
 
 #. type: Plain text
