nova skripto «komenci»

--- a/_locale/012-krei_2_github_pages.md.pot
+++ b/_locale/012-krei_2_github_pages.md.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-24 17:06+0100\n"
+"POT-Creation-Date: 2021-01-25 17:13+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -105,13 +105,13 @@ msgstr ""
 #. type: Plain text
 #: 012-krei_2_github_pages.md:32
 #, no-wrap
-msgid "Elektu titolon kaj mallongan priskribon, kaj pravalorizu la retejon:\n"
+msgid "Elektu vian laborlingvon (du-literan kodon), titolon kaj mallongan priskribon, kaj pravalorizi la retejon:\n"
 msgstr ""
 
 #. type: Fenced code block (bash)
 #: 012-krei_2_github_pages.md:32
 #, no-wrap
-msgid "_scripts/komenci \"Via titolo\" \"Via priskribo\"\n"
+msgid "_scripts/komenci xx \"Via titolo\" \"Via priskribo\"\n"
 msgstr ""
 
 #. type: Plain text
