--- a/_locale/fr/010-krei_github_pages.md.pot
+++ b/_locale/fr/010-krei_github_pages.md.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-01-24 17:06+0100\n"
+"POT-Creation-Date: 2021-01-25 17:12+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -103,13 +103,13 @@ msgstr ""
 #. type: Plain text
 #: 010-krei_github_pages.md:31
 #, no-wrap
-msgid "Choisissez un titre et une description brève, et initialisez le site :\n"
+msgid "Choisissez votre langue de travail (code de deux lettres), un titre et une description brève, et initialisez le site :\n"
 msgstr ""
 
 #. type: Fenced code block (bash)
 #: 010-krei_github_pages.md:31
 #, no-wrap
-msgid "_scripts/komenci \"Via titolo\" \"Via priskribo\"\n"
+msgid "_scripts/komenci xx \"Via titolo\" \"Via priskribo\"\n"
 msgstr ""
 
 #. type: Plain text
